--- a/walkings/templates/walkings/test.html
+++ b/walkings/templates/walkings/test.html
@@ -7,6 +7,7 @@
 
 
 {% block content %}
+<p>test 12/13 15:07</p>
 <div class="container mt-3">
   <section class="d-flex row justify-content-center align-items-center">
     <div class="map-area col-7">
@@ -97,6 +98,9 @@
                     </div>
                     <div class="modal-item-list">
                       <div class="modal-item-title">참가자 <span class="text-muted">(정원 {{dogr.join.count}}/{{dogr.membercnt}})</span></div>
+                      {% for joiner in dogr.join.all %}
+                       <img src="{% if joiner.profile %}{{ joiner.profile.url }}{% else %}https://dummyimage.com/90x90{% endif %}" alt="{{ dogr.user.username }}의 사진" style="height: 3rem; width: 3rem; border-radius:50%; border: 1px solid black;">
+                      {% endfor %}
                       <div>
 
                       </div>
