UPDATE: base.html 최하단에 footer용 마진 추가 / top 버튼 css

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,7 @@
   {% endif %}
   {% block content %}
   {% endblock content %}
+  <div style="margin-bottom: 3rem;"></div>
 </div>
   {% include 'footer.html' %}
 
