--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 <footer class="">
   <div class="d-flex justify-content-end mb-4 me-4 fixed-bottom" style="z-index: 2;">
-    <button onclick="topFunction()" id="myBtn" class="topBtn" title="Go to top">Top</button>
+    <button onclick="topFunction()" id="myBtn" class="topBtn" title="Go to top" style="border: 2px solid #C17F34; border-radius:60px; padding: 12px;">Top</button>
   </div>
   <nav class="navbar d-flex justify-content-center align-content-center opacity-75 fixed-bottom" style="background-color: #C17F34; height: 3rem; z-index: 1;">
       <a class="text-decoration-none text-white" href="#">
