add : reviews 팔로우

--- a/reviews/templates/reviews/index.html
+++ b/reviews/templates/reviews/index.html
@@ -83,8 +83,21 @@
                 <a href="{% url 'accounts:profile' review.user %}" style='color :black;' ><img class="profile" src="{% if review.user.profile %}{{ review.user.profile.url }}{% else %}https://dummyimage.com/90x90{% endif %}" style='border-radius: 100%; '></a>
                 
               </div>
+              
               <div class='d-flex justify-content: space-around'><a href="{% url 'accounts:profile' review.user %}" style='color :black;' class='text-decoration-none ' >&nbsp; <b>{{ review.user.username }}</b></a></div>
-                <p class='ms-auto'>{{ review.created_at| naturaltime  }}</p>
+                <p class='ms-auto'>
+                  {% comment %} 팔로우 {% endcomment %}
+                  <form id='follow-form={{ review.pk }}' data-user-id='{{ user.pk }}'>
+                      {% csrf_token %}
+                      {% if request.user in user.followers.all %}
+                      <input type='submit' class="btn button btnPush btnOrange me-3 mt-5" value="언팔로우" title="Button push orange">
+                      {% else %}
+                      <input type='submit' class="btn button btnPush btnOrange me-3 mt-5 " value='팔로우'title="Button push orange">
+                      {% endif %}
+                  </form>
+                  
+                 
+                  {{ review.created_at| naturaltime  }}</p>
             </div>
             <div>
 
@@ -336,6 +349,37 @@
  
 
   });
+  {% comment %} 팔로우 {% endcomment %}
+  const form = document.querySelector(`#follow-form-${review.pk}`)
+  const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value
+  form.addEventListener('submit', function (event) {
+      event.preventDefault()
+      console.log('실행')
+
+      const userId = event.target.dataset.userId
+      axios({
+          method: 'post',
+          url: `/reviews/follow/${userId}/`,
+          headers: { 'X-CSRFToken': csrftoken, }
+      })
+          .then((response) => {
+              console.log(response)
+              const followersCountTag = document.querySelector('#followers-count')
+              const followingsCountTag = document.querySelector('#followings-count')
+              const followersCount = response.data.followers_count
+              const followingsCount = response.data.followings_count
+              followersCountTag.innerText = followersCount
+              followingsCountTag.innerText = followingsCount
+              const isFollowed = response.data.is_followed
+              const followBtn = document.querySelector('#follow-form > input[type=submit]')
+              if (isFollowed == true) {
+                  followBtn.value = '언팔로우'
+              } else {
+                  followBtn.value = '팔로우'
+              }
+          })
+  })
+
 </script>
 
 
