--- a/reviews/templates/reviews/index.html
+++ b/reviews/templates/reviews/index.html
@@ -87,14 +87,16 @@
               <div class='d-flex justify-content: space-around'><a href="{% url 'accounts:profile' review.user %}" style='color :black;' class='text-decoration-none ' >&nbsp; <b>{{ review.user.username }}</b></a></div>
                 <p class='ms-auto'>
                   {% comment %} 팔로우 {% endcomment %}
-                  <form id='follow-form={{ review.pk }}' data-user-id='{{ user.pk }}'>
+                  {% if request.user != review.user %}
+                    <form id='follow-form-{{ review.pk }}' data-review-id='{{review.pk}}' class='follow-form' data-review-user-id='{{ review.user.pk }}'>
                       {% csrf_token %}
-                      {% if request.user in user.followers.all %}
-                      <input type='submit' class="btn button btnPush btnOrange me-3 mt-5" value="언팔로우" title="Button push orange">
-                      {% else %}
-                      <input type='submit' class="btn button btnPush btnOrange me-3 mt-5 " value='팔로우'title="Button push orange">
-                      {% endif %}
-                  </form>
+                        {% if request.user in review.user.followers.all %}
+                        <input type='submit' class="followBtn btn me-3 mt-5" value="언팔로우">
+                        {% else %}
+                        <input type='submit' class="followBtn btn me-3 mt-5 " value='팔로우'>
+                        {% endif %}
+                    </form>
+                  {% endif %}
                   
                  
                   {{ review.created_at| naturaltime  }}</p>
@@ -350,35 +352,42 @@
 
   });
   {% comment %} 팔로우 {% endcomment %}
-  const form = document.querySelector(`#follow-form-${review.pk}`)
+  const followforms = document.querySelectorAll('.follow-form')
   const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value
+
+  followforms.forEach((form) => {
+  
   form.addEventListener('submit', function (event) {
       event.preventDefault()
-      console.log('실행')
 
-      const userId = event.target.dataset.userId
+      const userId = event.target.dataset.reviewUserId
+      const reviewId = event.target.dataset.reviewId
       axios({
           method: 'post',
           url: `/reviews/follow/${userId}/`,
           headers: { 'X-CSRFToken': csrftoken, }
       })
           .then((response) => {
-              console.log(response)
-              const followersCountTag = document.querySelector('#followers-count')
-              const followingsCountTag = document.querySelector('#followings-count')
-              const followersCount = response.data.followers_count
-              const followingsCount = response.data.followings_count
-              followersCountTag.innerText = followersCount
-              followingsCountTag.innerText = followingsCount
+              // console.log(response)
               const isFollowed = response.data.is_followed
-              const followBtn = document.querySelector('#follow-form > input[type=submit]')
-              if (isFollowed == true) {
-                  followBtn.value = '언팔로우'
-              } else {
-                  followBtn.value = '팔로우'
-              }
+
+                // 동일한 유저의 팔로잉 일괄 처리
+                followforms.forEach((form) => {
+                  if (form.dataset.reviewUserId == userId){
+                    const followBtn = form.querySelector('input[type=submit]')
+                    if (isFollowed == true) {
+                      followBtn.value = '언팔로우'
+                    } else {
+                        followBtn.value = '팔로우'
+                    }
+                  }
+                })
+              
           })
+    })
   })
+
+
 
 </script>
 
