--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="{% static 'css/login.css' %}">
 <script src="https://kit.fontawesome.com/dcba51bc42.js" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
+<script src='https://unpkg.com/magic-snowflakes/dist/snowflakes.min.js'></script>
  {% endblock css %}
  {% load socialaccount %} 
  {% providers_media_js %}
